--- a/package.json
+++ b/package.json
@@ -3,34 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@mantine/core": "^5.10.4",
+    "@mantine/form": "^5.10.4",
+    "@mantine/hooks": "^5.10.4",
+    "@mantine/notifications": "^5.10.4",
+    "@refinedev/antd": "^5.34.0",
     "@refinedev/cli": "^2.7.4",
     "@refinedev/core": "^4.28.2",
     "@refinedev/inferencer": "^4.3.2",
     "@refinedev/kbar": "^1.1.2",
+    "@refinedev/mantine": "^2.5.0",
+    "@refinedev/react-router-v6": "^4.1.0",
+    "@refinedev/react-table": "^5.1.4",
+    "@refinedev/simple-rest": "^4.0.0",
+    "@tabler/icons": "^1.1.0",
+    "i18next": "^23.4.4",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "^5.0.0",
+    "react-i18next": "^13.1.2",
     "react-router-dom": "^6.8.1",
-    "@refinedev/mantine": "^2.5.0",
-    "@refinedev/react-table": "^5.1.4",
-    "@tabler/icons": "^1.1.0",
-    "@emotion/react": "^11.8.2",
-    "@mantine/core": "^5.10.4",
-    "@mantine/hooks": "^5.10.4",
-    "@mantine/form": "^5.10.4",
-    "@mantine/notifications": "^5.10.4",
-    "@refinedev/react-router-v6": "^4.1.0",
-    "@refinedev/simple-rest": "^4.0.0"
+    "react-scripts": "^5.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/node": "^12.20.11",
-    "typescript": "^4.7.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^14.1.1",
     "@types/jest": "^29.2.4",
+    "@types/node": "^12.20.11",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "typescript": "^4.7.4",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
